Spacing on nav bar resolved

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,11 +1,12 @@
 .banner {
+  background-color: rgb(250,250,250);
   color: black;
   text-align: center;
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+
   display: flex;
   justify-content: center;
   margin-bottom: 40px;
-  margin-top: 40px;
+  padding-top: 40px;
 }
 
 
