--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,22 +1,34 @@
 .navbar {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  box-shadow: 0 1px 5px 0 rgba(200,200,200,0.07),0 2px 0 0 rgba(0,0,0,0.03);
   background: rgb(200, 200,200);
   transition: all 0.3s ease;
   height: 70px;
-  padding: 0px 30px;
+  padding: 0px 0px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0px !important;
 }
 
+.logo_navbar {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
 .logo_navbar img {
-  height: 80px;
+
+
+  height: 110px;
   margin-top: 10px;
+
 
   /*border-radius: 50%; */
 }
 
-
+.navbar-left {
+  align-items: left;
+  justify-content: left;
+}
 /* Right section */
 .navbar-right {
   display: flex;
