--- a/app/assets/stylesheets/components/_wrapper.scss
+++ b/app/assets/stylesheets/components/_wrapper.scss
@@ -1,3 +1,4 @@
 .wrapper {
-  background-color: rgb(260,260,260);
+  background-color: rgb(250,250,250);
+  margin: 0px;
 }
